<resources>
    <string name="app_name">Gym Application</string>
    <string name="app_name_admin">GymApplication-Admin</string>
    <string name="profile">Profile</string>
    <string name="workout_programs">Workout Programs</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="reservations">Reservations</string>
    <string name="sub">Subscription</string>
    <string name="statistics">Statistics</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="name">Name: </string>
    <string name="surname">Surname: </string>
    <string name="email" translatable="false">Email: </string>
    <string name="phone">Phone: </string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_photo">Edit photo</string>
    <string name="save_photo">Save photo</string>
    <string name="profile_edit_header">Profile Edit</string>
    <string name="cost_per_day">Cost Per Day: %1$s$</string>
    <string name="cost_per_week">Cost Per Week: %1$s$</string>
    <string name="cost_per_month">Cost Per Month: %1$s$</string>
    <string name="cost_per_year">Cost Per Year: %1$s$</string>
    <string name="max_seats">Seats available: %1$s</string>
    <string name="edit_btn">Save</string>
    <string name="workout_lessons_header">Workout Lessons</string>
    <string name="add_lesson">Add Lesson</string>
    <string name="workout_description">Description:</string>
    <string name="edit_workout_btn">Edit</string>
    <string name="availability_btn">Availability</string>
    <string name="add_workout">Add Workout</string>
    <string name="workout_name">Workout Name</string>
    <string name="edit_workout">Edit Workout</string>
    <string name="edit_cost_per_day">Cost Per Day</string>
    <string name="edit_cost_per_week">Cost Per Week</string>
    <string name="edit_cost_per_month">Cost Per Month</string>
    <string name="edit_cost_per_year">Cost Per Year</string>
    <string name="add_description">Description</string>
    <string name="add_btn">Add</string>
    <string name="edit_lesson_btn" translatable="false">Edit</string>
    <string name="workout_availability">Workout Availability</string>
    <string name="subscriptions_header">Find Customer\'s Subscription</string>
    <string name="amount_sub">Amount</string>
    <string name="add_subscription">Add Subscription</string>
    <string name="customers_email_sub">Customers Email</string>
    <string name="select_workout_sub">Select Workout:</string>
    <string name="select_cost_sub">Select Cost:</string>
    <string name="add_dialog_title">Add new Subscription or add extra program to existing one</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="edit_dialog_tittle">Update Subscription</string>
    <string name="update">Update</string>
    <string name="signup_form">SignUp Form</string>
    <string name="name_signup">Name</string>
    <string name="surname_signup">Surname</string>
    <string name="email_signup" translatable="false">Email</string>
    <string name="phone_signup">Phone</string>
    <string name="signup_btn">Signup</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="admin_role_signup" translatable="false">Admin Role?</string>
    <string name="login_btn">Login</string>
    <string name="login_to_account">Login to your account</string>
    <string name="workout_calendar_header">Select Workout Program</string>
    <string name="lesson_availability_from_to">Lesson is available from: %1$s to: %2$s</string>
    <string name="make_reservation">Make Reservation</string>
    <string name="reservations_select_time">Select hour:</string>
    <string name="reservations_start_end_time">Your lesson will begin at %1$s and will end at %2$s</string>
    <string name="lesson_available_for">Available: %1$s / %2$s</string>
    <string name="reservations_confirm">Confirm</string>
    <string name="reservations_all">All Reservations</string>
    <string name="reservations_current">Current Reservations</string>
    <string name="customersSubHeader">Your subscription</string>
    <string name="max_people">Max seats available</string>
    <string name="customer_reservations_header">Your Reservations</string>
    <string name="select_reservation">Select:</string>
    <string name="total_sub_cost">Total cost:</string>
    <string name="workout_lessons_sub">Workout Lessons:</string>
    <string name="sub_lesson_expired">Expired</string>
    <string name="sub_created_at">Created at: %1$s</string>
    <string name="sub_expires_at">Expires at: %1$s</string>
    <string name="sub_lesson_cost">Cost: %1$s</string>
    <string name="sub_lesson_status_booked">Currently Booked</string>
    <string name="sub_lesson_status_canceled">Lesson Canceled</string>
    <string name="sub_lesson_status_confirmed">Lesson Finished</string>
    <string name="update_sub">Update</string>
    <string name="statistics_workout_name_header">Workout Name</string>
    <string name="statistics_NoSubs_header">Number of Subs</string>
    <string name="statistics_subs_header">Statistics for subscriptions</string>
    <string name="statistics_res_header">Statistics for reservations</string>
    <string name="statistics_res_hours_header">Popular hours of reservation</string>
    <string name="statistics_income_header">Total Income</string>
    <string name="statistics_sub_desc">Show the number of subscriptions each workout has, or the total earnings of each lesson, by descending order</string>
    <string name="statistics_res_desc">Show the number of reservations, for each workout by day or month</string>
    <string name="statistics_res_popular_hours">Show the popular hours of made reservations on selected day</string>
    <string name="statistics_select_date">Select Date:</string>
    <string name="statistics_select_month">Select Month:</string>
    <string name="statistics_subs_operation_1">No of subs </string>
    <string name="statistics_subs_operation_2">Earnings of lesson </string>
    <string name="statistics_subs_operation_day">Day</string>
    <string name="statistics_subs_operation_month">Month</string>
    <string name="statistics_barChart_desc_day"># of reservations, of each workout lesson that were made on date selected</string>
    <string name="statistics_barChart_desc_month"># of reservations, of each workout lesson that were made on month selected</string>
    <string name="statistics_barChart_desc_popular_hours"># of reservations, that were made each hour</string>
    <string name="no_of_reservations">"# of reservations"</string>
    <string name="workouts_label">workouts</string>
    <string name="statistics_pie_chart_desc"># of subscriptions %</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="cost_per_day_enum">cost per day</string>
    <string name="cost_per_week_enum">cost per week</string>
    <string name="cost_per_month_enum">cost per month</string>
    <string name="cost_per_year_enum">cost per year</string>
    <string name="signup_success">Customer with username: %1$s Signed up successfully!</string>
    <string name="auth_renewed">Auth renewed successfully!</string>
    <string name="profile_edit_wrong_fields">Field cannot be empty!</string>
    <string name="profile_edit_success">Profile edited successfully!</string>
    <string name="login_success">Login Successful !</string>
    <string name="exit_dialog_message">Are you sure you want to exit ?</string>
    <string name="logout_dialog_message">Are you sure you want to logout ?</string>
    <string name="yes_dialog_message">Yes</string>
    <string name="no_dialog_message">No</string>
    <string name="smth_wrong_message">Sorry something went wrong </string>
    <string name="expired_lessons_message">You have expired lessons ! \nPlease check your Subscription</string>
    <string name="no_availabilities_inserted_message">You have added lessons without availabilities! \nPlease check your workout lessons</string>
    <string name="sub_added_success">Subscription Added Successfully!</string>
    <string name="sub_updated_success">Subscription Updated Successfully!</string>
    <string name="sub_no_workouts">No workouts found!</string>
    <string name="no_empty_name_workout">Name cannot be empty!</string>
    <string name="no_empty_cost_workout">Cost cannot be empty!</string>
    <string name="no_empty_people_workout">Max number of people cannot be empty!</string>
    <string name="workout_edited">Workout Lesson Edited!</string>
    <string name="workout_added">Workout Lesson Added!</string>
    <string name="sub_update_lesson">Update Subscription for lesson: %1$s </string>
    <string name="email_example" translatable="false">example@gmail.com</string>
    <string name="add_availability_warning">Please add availability to current workout before exiting</string>
    <string name="hour_error_message">Ending hour should be greater that Starting hour</string>
    <string name="availability_exists_message">You already have availability for: %1$s</string>
    <string name="availability_inserted_message">Availability Inserted!</string>
    <string name="availability_delete_message">Are you sure you want to delete this availability?</string>
    <string name="availability_deleted">Availability Deleted Successfully!</string>
    <string name="lesson_full_message">Lesson is full</string>
    <string name="reservation_success_message">Reservation made successfully!</string>
    <string name="lesson_starts_message">Lesson starts at %1$d hour(s), %2$d minute(s), and %3$d second(s)</string>
    <string name="notification_tittle">Reminder from Gym App</string>
    <string name="notification_body">Your %1$s lesson is beginning</string>
    <string name="reservation_canceled">Reservation canceled</string>
    <string name="no_empty_fields">Field must not be empty</string>
    <string name="cant_book_for_next_day">Can\'t book lesson for next day</string>
    <string name="workout_ended">%1$s workout lesson has ended!</string>
    <string name="reconnecting_message">Reconnected</string>
    <string name="image_failed">Failed to load image</string>
    <string name="image_success">Image uploaded successfully!</string>
    <string name="image_upload_failed">Image failed to upload</string>
    <string name="user_not_found">User not found!</string>
    <string name="bad_creds">Bad credentials!</string>
    <string name="availability_not_found">Availability not found!</string>
    <string name="invalid_token" translatable="false">Invalid refresh token!</string>
    <string name="sub_not_found">Subscription doesn\'t exist</string>
    <string name="sub_cust_not_found">You don\'t have any subscriptions</string>
    <string name="booked_lessons">You have booked lessons for this time</string>
    <string name="res_available_hour">Reservation must be made in available hours</string>
    <string name="sub_lesson_exp">Your subscription to this lessons is expired</string>
</resources>