<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_customer_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile"/>
        <item android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/workout_programs"/>
        <item android:id="@+id/nav_reservations"
            android:icon="@drawable/ic_reservations"
            android:title="@string/reservations"/>
        <item android:id="@+id/nav_customer_subscription"
            android:icon="@drawable/ic_subscription"
            android:title="@string/sub"/>
        <item android:id="@+id/nav_customer_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"/>
    </group>
</menu>