<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_admin_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile"/>
        <item android:id="@+id/nav_workout_programs"
            android:icon="@drawable/ic_workout_programs_list"
            android:title="@string/workout_programs"/>
        <item android:id="@+id/nav_subscription"
            android:icon="@drawable/ic_subscriptions"
            android:title="@string/subscriptions"/>
        <item android:id="@+id/nav_stats"
            android:icon="@drawable/ic_stats"
            android:title="@string/statistics"/>
        <item android:id="@+id/nav_admin_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"/>
    </group>

</menu>