<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.Signup"
    android:id="@+id/sign_up"
    android:background="@drawable/gym_app">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/signup_box"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <TextView
            android:id="@+id/textViewSignupForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/signup_form"
            android:textColor="#152AA3"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewSignupForm"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:autofillHints="name"
            android:ems="10"
            android:hint="@string/name_signup"
            android:inputType="textPersonName"
            android:maxLength="30" />

        <EditText
            android:id="@+id/editTextSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/surname_signup"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:maxLength="30" />

        <EditText
            android:id="@+id/editTextSignupEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextSurname"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/email_signup"
            android:inputType="textEmailAddress"
            android:maxLength="40" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextSignupEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:autofillHints="phone"
            android:ems="10"
            android:hint="@string/phone_signup"
            android:inputType="phone"
            android:maxLength="10" />

        <EditText
            android:id="@+id/editTextSignUpUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPhone"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:autofillHints="username"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:maxLength="30" />

        <EditText
            android:id="@+id/editTextSignUpPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextSignUpUsername"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="50" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextSignUpPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:onClick="signup"
            android:text="@string/signup_btn" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>